# SmartAirportManagement

./: .gitignore  DEPLOYMENT_GUIDE.md  FUTURE_ROADMAP.md  PROBLEM_STATEMENT.md  README.md  docker-compose.yml  test_assets.py  test_post.py
.github/workflows/: backend-tests.yml  test.yml
backend/: .env.example  Dockerfile  airport.db  database.py  email_service.py  llm.py  main.py  pyproject.toml  requirements.txt  servicenow.py  start.ps1  start.sh  whatsapp.py
backend/logger/: audit.py
backend/routers/: ai.py  assets.py  auth.py  fids.py  incidents.py  iot.py  metrics.py  notifications.py  preventive.py  qrcode_router.py  reports.py  shifts.py  technician.py  workorders.py  ws.py
backend/security/: rbac.py
backend/services/: anomaly_detection.py  predictive_ai.py
backend/tests/: anomaly_detection_test.py  conftest.py  database_security_test.py  health_test.py  incidents_integration_test.py  predictive_ai_test.py  test_assets.py  test_auth.py  test_health.py  test_incidents.py  test_iot.py  test_predictive_ai.py  test_preventive.py
mobile/: App.tsx  app.json  expo_error.txt  package-lock.json  package.json  tsconfig.json
mobile/src/: theme.ts
mobile/src/components/: IncidentCard.tsx  LoadingSpinner.tsx  PriorityBadge.tsx  StatCard.tsx
mobile/src/navigation/: AppNavigator.tsx
mobile/src/services/: api.ts  offlineSync.ts
mobile/src/store/: index.ts
passenger-web/: build_log.txt  index.html  package-lock.json  package.json  ts_error.txt  ts_error_fixed.txt  tsconfig.json
passenger-web/src/: App.tsx  api.ts  index.css  main.tsx
(+29 files in other folders)
