[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "WARNING"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[project]
name = "smart-airport-backend"
version = "2.1.0"
description = "AI-Powered Airport Operations Management Platform"
requires-python = ">=3.11"
